@@ -1,0 +1,7 @@
+
+return {
+    freeRailways = {
+        railGridType = "T junctions", -- can be either "T junctions" or "X junctions"
+        railGridBlockRadius = 1,
+    }
+}
