@@ -7,7 +7,8 @@ return {
             noMoreInfestedChunks = true,
             marketIoChests = true,
             marketRng = true,
-            freeRoboports = true,
+            freeRoboports = false,
+            freeRailways = true,
             tradeUniqueness = true,
         },
     },
