@@ -1,0 +1,11 @@
+
+return {
+    strings = {
+        railsX = "0eNqlW1tu20gQvAu/pYDd8/ZJAiyCQLYJh4BMGTJlrBHo7iElrZPIzVUV+RVbEcs1/Z6a4c/qfntoXvZt11d3P6vXbvOy7nfrp337OP7+b3XndFW9j/8cV9Xm/nW3PfTNevzeS9s9VXf9/tCsqvZh171Wd/8MCO1Tt9mOz/bvL011V721+/4wfLKqus3z+MH5G+uv1QDYdo/N8Dfk+G1VNV3f9m1zhjn98v69OzzfN/vhCx9PPxz2b83jer9pR8iX3evwzK67cJX6xNUPyI/tvnk4/1c4rj4BKgioFqA3AN3v9fUD1tOPfgpSTpByNEA8xkrhZQYQEF5mRJep/7PM9AEyPru+hIzB6ks4gdRfwm1mmXSAs5gVcnkmyBiFFJVgogjJxUbRv2398GPTdtMW9xeLh2uLOwvbYdHlz5FQ/42oFqJn2IYL2XRNVizogJoznUGB9UfSz8n0UIJRgsXMSnvJJGYBDAjnhiQLM1lVuCYxAa+oMDEkZSqIzK6hZE6aHle4VyjscaUy56OyJqSyKtpFspnopuMj1gLqC89yzdOqHpoYGyQKOjPQ5Q9oC6yQdaNYKK6m4txdOOXr5VrucULWDxEAlGpFoox/nFtWnKyUcn5ZEbWKkwskz2vDWpXZxVkVDzNsIiueHat5VnXCGBZqCtHbTvJ4VzJ9ZLH0cEY5HBPuRgHHdNyYBGHCiVRwTDyRLgZ1tyuUZwc6iGniQS2YzC5YgEgvC0GtBYd6YfMwQfGOZAeRuTvWhdXYZOpYpu52iQ9+4fJNpoHdzCOgkQe1YPC+Q0Rm5gbZq14RLchCzvIIzwhnkOJxGXE9AQ+hCGeQw0Moujlz/Dgw3q540ZP9DZAWYpizOTjxtdDoJgQM9JFuQg6wZeZBLZgyayMz/nC7xCdul5QnwS2rJlaiu7aqyZjVGJAQTY5nasFwKsO0q0yOgS2liIvirJ3H52JiCSMpkYNtAghnEhNJgrIM00r+XC9buxUBWfjSZ8EoOzsANsyOBQWcnT2f6xZMWMjNdEZcaEUzahKzWVfgyCBnsqEDEnJmBToBFNrCngoJIMoX4ZlaMHTPAcT9QvccwDXF86AWDN1rEA9HanuhgE5eKEn7Y3rJyGhUZmnaMiFqF1pKACRYqWckjYkj82bMDJ2D1kquXQFVV2pWSFBAhJfazxuIM3TIWgdWpyiIfSNfnkycNG8YLMgwKHWeddT+Gd32W+FEaQU22vLHTQWkHQPauQgpdGM8SaUbAyWlbgyU1Lox0EBWQRX7RknkcQB27AUGBaRZkbywptpcC8sVEGeFvsagwGGEqCy0q2kBZTVvBc4RRN1CVJurX9gBbVRW9sZQI49q4rDCN8Yuk/Muhlq4gRfQ08Wx2jfE1LHiN4bKqt8YKtuXkMHM+TnDvn6SwWyf0f3JvjdJXmRQkiXdp5C5zOWFtd/sfm5pnzKrtKf7FBJaXmbtKNRBeyuvsy63gDHhWY1iInL9vOt3CsnM4lm1AopcH2ftV1DLgpe8nZC4mXoVQLPtrzKrHHpb+5BQU68TDKSA+8qstKcT3OZduzutFWDpqFcWJtwRWFVvaq3c+w6YH7g0iZP2Mwt9mHVndfwrQIYH9oBW7RvqgX0tYgInsmqe2jpOZM9dp3AUq1H/5f9Yq2wg9u0fZw//kc2DEefbqmr75nl45verXKtqu7lvtsNnX4ef35r963nezENdLppy1mEcisfjL32zqak=",
+        railsTUpward = "0eNqlmd1u4kAMhd9lrkOV8fwlPEfvVtUqwIiORAMKCVpU8e6bQLZVqdkcN1dAmnx4xj6eY/quVrsuHppUt2r5ro51dVi0+8W2SZvh8x+1NJSp8/ByyVS1Ou53XRsXw32HVG/Vsm26mKm03tdHtfzVE9K2rnbDs+35ENVSnVLTdv2VTNXV23DhdsfiWfXAVG9i/x368pKpWLepTfGGuX44/667t1Vs+hs+nl53zSluFk2VBuRhf+yf2ddjrDq/xmp78iY1cX37k7tk34AEAokDWgZoMCDBEVoQCEfoPoADaTEmigE+uSsyf3LTUP8Vun6tUv0YbUe0u0cbBh2wDbBXos6/AokBFpJY3RhquA9VM+Tys7jbnr19bR8EG27M6cUPlYwhteOYXEVpLWSW0yvXBDMDxwwc0wiZyH5aSfJ1+Sj77L46NF7Cc+VB+Rds+bPbGrAGkI9rL+/XzmlKi0QVROhSlDIzsot7NrcXJJWX1gBUz9MCe07RPM1yWiCpvu4XzzUC+pnAoEogWGCajZdlepRpcGZAmQ5nFrKzBWLC51UJMw2uqHFDzbSiDK4oPPOGpJHqaU0ZMxPKRmpndikWiouJzz7Xpoyf2VLYSIM0UjPdp0wxc/lspLCgCK9TCyuK8JKyWuhVICisKMKzb2FFEZ4oCyvKCBLlpF0KcCjWS6FmukvZIDqk/41rmhAbbAupCAwAFSsLGNdcLjz/wnS+nBYygQnYkbQDAGlyRgoNwI5aybBOwLDunND3AEOg89LmB0xqLogmNQImNVf86FcVXSKjjytlZpqADuhzmZmGmFpmpiEmyYoKYhqZ8CGmFTZ/COqEFhWCeqFFhaBB6CYhqNT4QVDp8YRAg9T4QVCp8YOgUuMHQaXGD4JKjR8EdaI+7cc+Td/slOfgHvu5zuj/YF8yldr41jM+/82TqV21irv+2nP//hSb422BhbahpFAUpE3wl8tfjI+SVw==",
+        railsTDownward = "0eNqlmd1u4jAQhd/F16GKx38xz9G71WoVwKKRaEAhoK0q3n2TQlsV3M055aolJF9sH8+ZGfOqFptD2nVN26v5q9q39W7Wb2frrlmNn/+quZFCvYx/ToWqF/vt5tCn2XjfrmnXat53h1SoZrlt92r+ayA067bejM/2L7uk5urYdP1huFKotn4eL5zvmD2qAdi0qzS8Q59+Fyq1fdM36Yx5+/Dypz08L1I33PDxdFc3m9nlJYXabffDM9v2Mtbywb0NNj64Ab5qurQ8fzsM/oYpX5nLp7ppvyU7hmw+yMtDd0yr2fiCW6Z9I2r5CjQZoP1cvH5grZ/6b5D6jNTTY3Qo0sBIjyIdjAwoMsDICkVGGBlheXB9dAlDcYW0hqG4RlpgKK6SNjAU10nDcSSEUHAkCSGUxyxEqqyH+BwSjiUhtIejSQjt4XgSXHuB48ng2otmcki45BAt10kk5/kipPddMXWOadg9cAUNOaglHfWK6XJMRzIDMHnPBmoAJh9YKCJ9xSaUACwpnaXi9JqaknXUOL2mRrPQML2mRth8GqfX1BgSKhpYU8uYiv5wlZvSNAt3ZF69HnFWMM8m6wgIFriiVwC/NhVTmQtQmZvI1dHIKG3JFdIQU3PZBGIKZ9IQ05AuBUEtWfZeQ3Oxb92dsZ8dqSdraTHT4WkDO30zbSS2unNNs9OP7PT1dIi68k5otn3Wd/poFipk4oOghqxQIKil+hMB+hPnyNoUGqcn+xMIGsj+BIJWZH8CQSPp+kAF4UuqPJFLeSI3TU9uE3j2gEKABsXLnf6XcxVv7nTqXE7xloUigjlKsOpdMIN0qd6zUYsIFpgRi+W2WIWdJRvNYSPmiOO53gitTrnjzhKEyDtkUv2gfxauFukmgoBp4L+TBo/LhZg01UKJ/3bSuSAN7ieHPuNLpnd+8NjmjBfquElP448nTZ+eh4c+f8wp1KZepM1w7XH4/5i6/TlLVNqGKKGqRJvgT6d/IUOHlw==",
+        railsIVertical = "0eNqVlk1ugzAQRu8ya4gyYwg/N8gZqqqCxKKWiEHGREURd68hUbPIUGVWBuN5fEYPmBvU7ah7Z6yH8gaDrfrYd3HjzHk5/4FSUQTTMswRVPXQtaPX8bKuN7aB0rtRR2BOnR2g/AgE09iqXWr91Gso4WqcH8NMBLa6LBP3FfERAtDYsw73wPkzAm298UbfMevJ9GXHS61dWPCs9q4yzbePw7BA+24IVZ19pEVc0+I8Ry8QehdC/0DUH2SpjR/bfUXQLl0h+10a9nk2Tp/ulxMGmgi3p7hkqXB7LOQgTJJykEyYhIXkwiQZBymESVgI7oVRCpaCwiw8haRvAmsxKum7wGOk4iIrHUrV3cBI5UVWPJTqu4GRCoy8fFKFeQxJHUZWP5JKvIGRWkz8B11q8QZGajGx+pHU4g2M1GJi9SOpxRsYqcXE6ye1mMcoqcXE6qekFm9g6L1eoHi0Agp37DNWSvr75zuTRNoABEzou4zXl1Dz7AMjaKtahx4OjuH4qt2wllKOSVZQlueEKjvM8y884l0X",
+        railsIHorizontal = "0eNqV1t9qgzAUBvB3OdexmMT/b9BnGGNoG1zARomxrBTffbGWFbaLfeeqVePPwEc+zp26YTGTty5Qc6fZtVMSxqT39rxdf1GjlaDb9rMKart5HJZgkm3dZF1PTfCLEWRPo5upeYuC7V07bO+G22Sooav1YYl3BLn2st3YVyRHiqB1ZxO/Idd3QcYFG6zZmcfF7cMtl874uODnbd/aIXl+RNA0zvGd0T33mh7yx2brQx7xs/XmtD+Nm/9jqteOQlT7z5Bs+F9VPkwp/yc1SmqYzFAyh8kcJUuYLFCyhskSjgfPp4JNPKAaNvGEZAqjeEZSwiiekoRPkcJjkvA5UnhOEj5JihEUfJYUIyj4NClGUPB50oygKl6HKsSseSWKmCrltShkSl6NQqbi9ShkamaRQmjGbFIIzZlVCqEFs0ohtGRWKYRWzCqF0JpZpQiqU2aVQqhkVimEKmaVQqhmVimEZtiIq+VzxlXq95BbbFO0DeYSjddUL2hoOxMncjrG/1fj530PlczKWpVVpaQui3X9BlVN9VY=",
+    },
+    itemStacks = {},
+}
