@@ -63,6 +63,7 @@ tools-upgrade-market-no-market=No markets found for upgrade.
 tools-toggle-market-rng=Enable "Greater Market RNG"
 tools-toggle-trade-uniqueness=Enable "Trade Uniqueness"
 tools-toggle-free-roboports=Enable "Free Roboports"
+tools-toggle-free-railways=Enable "Free Railways"
 tools-toggle-market-io-chests=Enable "Market I/O Chests"
 tools-toggle-automated-chunk-unlocking=Enable "Automated Chunk Unlocking"
 tools-toggle-infested-chunks=Enable "No More Infested Chunks"
@@ -124,6 +125,8 @@ trade-uniqueness-title=Trade Uniqueness
 trade-uniqueness-effect=Newly bought markets can no longer contain trades that are similar by item type to existing trades.
 free-roboports-title=Free Roboports
 free-roboports-effect=Newly bought chunks now contain pre-built roboports [item=roboport] and power poles [item=big-electric-pole].
+free-railways-title=Free Railways
+free-railways-effect=Newly bought chunks now contain pre-built rails [item=rail] and signals [item=rail-signal] [item=rail-chain-signal].
 automated-chunk-unlocking-title=Automated Chunk Unlocking
 automated-chunk-unlocking-effect=Random chunks that don't have biters are periodically unlocked as long as you have the coins in your inventory.  Works for each player separately.
 no-more-infested-chunks-title=No More Infested Chunks
