@@ -8,8 +8,10 @@ Date: 2024.08.15
     - Fixed big power poles not actually creating perfect X's from the "Free Roboports" upgrade.
     - Upgrades that are disabled by default now indicate so in the upgrades tab.
     - Upgrade requirement progress now appears to be complete when it reaches 100% progress.
+  Balancing:
+    - Decreased the default minimum void chunk chance from 6% to 3%.
   Features:
-    - (TODO) Added "Free Railways" upgrade.
+    - Added "Free Railways" upgrade.
     - Added scenario settings for toggling whether certain upgrades should be enabled by default.
     - (TODO) Added ability to import and export scenario settings.
   Major Features:
